--- a/ToDo.txt
+++ b/ToDo.txt
@@ -6,6 +6,7 @@ dodać statusy do ogłoszeń
 dodać statusy do meoderatorów
 dodać statusy do użytkowników
 zmienić Ok na Created w statusach 200 na 201
+nie działa constraint User-UserType
 
 DONE:
 zmiana hasła moderatora: nie pozwolić aby nowe hasło było takie samo jak stare
