simplified DB structure - User Domain
deleted EnterpriseUser, PrivateUser, Phone tables
added migration

--- a/ToDo.txt
+++ b/ToDo.txt
@@ -7,6 +7,8 @@ dodać statusy do meoderatorów
 dodać statusy do użytkowników
 zmienić Ok na Created w statusach 200 na 201
 dodać walidację adresów email
+uprościć strukturę: usunąć tabele EnterpriseUsers and PrivateUsers
+poprawić Usera
 
 DONE:
 zmiana hasła moderatora: nie pozwolić aby nowe hasło było takie samo jak stare
