changed Moderator Domain
deleted ModeratorType table
adjusted  Moderator controller and service to account status changes

--- a/ToDo.txt
+++ b/ToDo.txt
@@ -1,13 +1,9 @@
 ﻿TODO:
-tabela z lokalizacjami
 fluent validation (?)
-dezaktywowanie kont i ogłoszeń
-dodać statusy do ogłoszeń
-dodać statusy do meoderatorów
-dodać statusy do użytkowników
 zmienić Ok na Created w statusach 200 na 201
 dodać walidację adresów email
 odzyskiwanie kont użytkowników
+filtrowanie i paginacja ogłoszeń
 
 DONE:
 zmiana hasła moderatora: nie pozwolić aby nowe hasło było takie samo jak stare
@@ -17,3 +13,8 @@ zmapować WatchedUser na WatchedUserDto
 uprościć strukturę: usunąć tabele EnterpriseUsers and PrivateUsers
 poprawić Usera
 poprawić WatchedUser Endpoint
+tabela z lokalizacjami
+dodać statusy do ogłoszeń
+dodać statusy do meoderatorów
+dodać statusy do użytkowników
+dezaktywowanie kont i ogłoszeń
